# xoa-proxy

./: Cargo.toml  LICENSE  xcp-ng-ce-public.asc  xoa-proxy-rpm-gpg
.cargo/: config.toml
.github/: release.yaml
.github/workflows/: xoa-proxy.yml
SOURCES/: deploy-proxy.sh
SOURCES/logrotate.d/: xoa-proxy
SPECS/: xoa-proxy.spec
packaging/: 83-xoa-proxy.preset  xoa-proxy.service
src/: config.rs  error.rs  handler.rs  lib.rs  main.rs  state.rs  stream.rs
tests/: integration.rs
